Reformat ContextClassLoaderTest