@@ -27,7 +27,6 @@ import java.net.URLClassLoader;
 import java.util.Collections;
 import java.util.List;
 import java.util.Properties;
-
 import org.junit.After;
 import org.junit.Before;
 import org.junit.Test;
@@ -126,9 +125,10 @@ public class ContextClassLoaderTest {
     Class<?> yamlClass = yamlCL.loadClass(Yaml.class.getName());
 
     Object tpti = tptiClass.getConstructor(List.class)
-            .newInstance(Collections.singletonList("org.yaml.snakeyaml.issues.issue318"));
-    Object loaderOptions = loaderOptionsClass.newInstance();
-    loaderOptions.getClass().getMethod("setTagInspector", tagInspectorClass).invoke(loaderOptions, tpti);
+        .newInstance(Collections.singletonList("org.yaml.snakeyaml.issues.issue318"));
+    Object loaderOptions = loaderOptionsClass.getDeclaredConstructor().newInstance();
+    loaderOptions.getClass().getMethod("setTagInspector", tagInspectorClass).invoke(loaderOptions,
+        tpti);
     Object yaml = yamlClass.getConstructor(loaderOptionsClass).newInstance(loaderOptions);
 
     DomainBean bean = new DomainBean();
